<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firebase.FirebaseActivity">

    <Button
        android:id="@+id/button_firebase_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="11dp"
        android:onClick="register"
        android:text="@string/register"
        app:layout_constraintEnd_toStartOf="@+id/button_firebase_disconnect"
        app:layout_constraintStart_toEndOf="@+id/button_firebase_login"
        app:layout_constraintTop_toBottomOf="@+id/firebaseUserPassword" />

    <Button
        android:id="@+id/button_firebase_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="10dp"
        android:onClick="login"
        android:text="@string/login"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_firebase_register"
        app:layout_constraintEnd_toStartOf="@+id/button_firebase_register"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_firebase_disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="disconnect"
        android:text="@string/disconnect"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_firebase_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_firebase_register" />

    <EditText
        android:id="@+id/firebaseUserPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/firebaseUserEmail"
        app:layout_constraintTop_toBottomOf="@+id/firebaseUserEmail" />

    <EditText
        android:id="@+id/firebaseUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="297dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>